--- a/website/templates/website/products.html
+++ b/website/templates/website/products.html
@@ -18,6 +18,83 @@
             <div class="itemname">1TB Laptop HDD</div>
             <div class="itemprice">Price: Rs.5000.00 </div>
         </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/harddrive.jpg"  alt="product image">
+            </div>
+            <div class="itemname">SEA SHELL SATA 2.5 inch SATA External hard drive Casing</div>
+            <div class="itemprice">Price: Rs.379.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/homethrature.jpg" alt="product image">
+            </div>
+            <div class="itemname">Zebronics BT4440 RUCF 60 Watt Bluetooth Home Theatre</div>
+            <div class="itemprice">Price: Rs.2999.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/usb.jpg" alt="product image">
+            </div>
+            <div class="itemname">Play Run USB Electric Dual Flameless Lighter Torch Rech</div>
+            <div class="itemprice">Price: Rs.794.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/m1.jpg" alt="product image">
+            </div>
+            <div class="itemname">Boult Audio Thunder Bluetooth Headset</div>
+            <div class="itemprice">Price: Rs.1299.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/m2.jpg" alt="product image">
+            </div>
+            <div class="itemname">Gigabyte NVIDIA GeForce GT 710 2 GB DDR3 Graphics Card</div>
+            <div class="itemprice">Price: Rs.3299.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/m3.jpg" alt="product image">
+            </div>
+            <div class="itemname">CSD-255-21 Combo Box Analog Watch </div>
+            <div class="itemprice">Price: Rs.330.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/m4.jpg" alt="product image">
+            </div>
+            <div class="itemname">Casio FX-991ES Plus-2nd Edition Scientific Scientific </div>
+            <div class="itemprice">Price: Rs.1087.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/m5.jpg" alt="product image">
+            </div>
+            <div class="itemname">Regatech PA5108U-1BRS, PA5109U-1BRS, PA5110U 6 Cell Lap</div>
+            <div class="itemprice">Price: Rs.2756.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/m8.jpg" alt="product image">
+            </div>
+            <div class="itemname">Canon EOS 3000D DSLR Camera Single Kit with 18-55 lens (16 GB Memory Card & Carry Case)  (Black)</div>
+            <div class="itemprice">Price: Rs.27835.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/m6.jpg" alt="product image">
+            </div>
+            <div class="itemname">15 inch Expandable Laptop Backpack</div>
+            <div class="itemprice">Price: Rs.450.00 </div>
+        </div>
+        <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/m7.jpg" alt="product image">
+            </div>
+            <div class="itemname">Pitambara USB Type C to 3 Port USB 3.0 and Lan RJ45 </div>
+            <div class="itemprice">Price: Rs.1249.00 </div>
+        </div>
     </div>
     </div>
 {% endblock  %}
