--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -21,11 +21,11 @@ body{
     height: 250px;
     text-align: center;
     font-size: xx-large;
-    background-image : url("/static/img/chip1.jpg");
+    background-image : url("/static/img/title.jpg");
     background-size:cover;
     margin: 0px 0px 0px 0px;
     padding-top: 150px;
-    color: #17421D;
+    color:greenyellow;
 }
 
 .menu{
@@ -33,7 +33,7 @@ body{
     width: 100%;
     height: 50px;
     font-size: larger;
-    background-color: #17421D;
+    background-color: blue;
     text-align: center;
     padding-top: 15px;
     margin: 0px 0px 0px 0px;
@@ -54,7 +54,7 @@ body{
 .content{
     display: block;
     width: 100%;
-    background-color: white;
+    background-color: rgb(255, 127, 202);
     min-height: 500px;
     margin: 0px 0px 0px 0px;
     border-width: 1px;
@@ -74,9 +74,15 @@ body{
     height: 300px;
     margin-left: 10px;
 }
+.homecont img{
+    float: left;
+    width: 400px;
+    height: 300px;
+    margin-left: 10px;
+}
 
 .contenttext{
-    text-align: justify;
+    text-align: left;
 }
 
 .productcontent{
@@ -94,14 +100,14 @@ body{
 
 .productitem{
     display: inline-block;
-    width: 30%;
-    height: 250px;
+    width: 45%;
+    height: 400px;
     text-align: center;
 }
 
 .productitem img{
-    width: 100px;
-    height: 100px;
+    width: 250px;
+    height: 250px;
     display: block;
 }
 .productitem .itemimage{
