--- a/companyapp/templates/companyapp/base.html
+++ b/companyapp/templates/companyapp/base.html
@@ -3,17 +3,16 @@
 <html lang="en">
 
 <head>
-    <title>Harish Electronic Private Limited
-    </div></title>
+    <title>Silicon Private Limited</title>
     <link rel="stylesheet" href="{% static 'css/layout.css' %}">
-    <link rel = "icon" href ="{% static 'img/title.jng' %}" type = "image/x-icon"> 
+    <link rel = "icon" href ="{% static 'img/p1.jpg.' %}" type = "image/x-icon"> 
               
 </head>
-
 <body>
     <div class="container">
     <div class="banner">
-        harish Electronic Private Limited.
+       
+        Silicon Private Limited.
     </div>
     <div class="menu">
         <div class="menuitem"><a href="/home">Home</a></div> 
@@ -25,7 +24,7 @@
     {% endblock  %}
     </div>
     <div class="footer">
-        Copyright © 2020 Harishs Electronic Private Limited, Developed by Harisf G.
+        Copyright © 2020 Silicon Private Limited, Developed by harish
     </div>
     </div>
 </body>
